<resources>
    <string name="app_name">JuanPalomo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombredospuntos">Nombre:</string>
    <string name="recetadospuntos">Receta:</string>
    <string name="descripciondospuntos">Descripción:</string>
    <string name="app_desc">Recetas de cocina comunitarias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="versi_n_1_0_0">Versión: 1.0.0 \n</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="_30_05_2019">30/05/2019</string>
    <string name="fecha_de_la_versi_n">Fecha de la versión:</string>
    <string name="h_ctor_moragues">Héctor Moragues \n</string>
    <string name="desarrollado_por">Desarrollado por:\n</string>
    <string name="OBJETO_RECETA">receta</string>
    <string name="OBJETO_INGREDIENTES">ingredientes</string>
    <string name="MISRECETAS">misrecetas</string>
    <string name="RECETASPORINGREDIENTES">recetasporingredientes</string>
</resources>
