<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAcercaDe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:text="@string/acerca_de"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            app:layout_constraintTop_toTopOf="@id/tvAcercaDe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintWidth_percent="0.8"
            android:id="@+id/logoChef"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"

            android:src="@drawable/cooking" />

        <TextView
            android:id="@+id/tvAppNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoChef" />

        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/versi_n_1_0_0"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppNombre" />

        <TextView
            android:id="@+id/tvDesarrolladoPor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/desarrollado_por"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppVersion" />

        <TextView
            android:id="@+id/tvAppAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/h_ctor_moragues"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesarrolladoPor" />

        <TextView
            android:id="@+id/tvTituloFechaVersion"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/fecha_de_la_versi_n"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppAutor" />
        <TextView
            android:id="@+id/tvFechaVersion"
            app:layout_constraintTop_toBottomOf="@id/tvTituloFechaVersion"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30_05_2019"
            />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>